<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">hJOP Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_server_select_title">Select a server</string>
    <string name="activity_train_handler_title">Engine control</string>
    <string name="activity_train_request_title">Select an area</string>
    <string name="activity_about_title">About</string>
    <string name="activity_new_server_title">Server properties</string>
    <string name="activity_settings_title">Settings</string>

    <string name="hamburger_server_select_title">Server select</string>
    <string name="hamburger_train_request_title">Engine request</string>
    <string name="hamburger_about_title">About</string>
    <string name="hamburger_settings_title">Settings</string>
    <string name="hamburger_state_unauthenticated">Not logged in</string>
    <string name="hamburger_state_server">Server:</string>
    <string name="hamburger_state_disconnected">disconnected</string>
    <string name="hamburger_built">Built</string>

    <string name="ta_multitraction">Multitraction</string>
    <string name="ta_total">Total control</string>
    <string name="ta_direction_forward">forward</string>
    <string name="ta_direction_backwards">backward</string>
    <string name="ta_idle">Idle</string>
    <string name="ta_emergency_stop">Emergency STOP</string>
    <string name="ta_release">Release</string>
    <string name="ta_release_ok" tools:ignore="PluralsCandidate">Engine %d released.</string>
    <string name="ta_release_really">Really release engine</string>
    <string name="ta_dialog_group_title">Choose engines for multitraction</string>
    <string name="ta_dialog_new_engine_group_title">New engine received, choose engines for multitraction</string>
    <string name="ta_dialog_ungroup_msg">Turn off multitraction of other engines?</string>
    <string name="ta_dialog_ungroup_ok">OK</string>
    <string name="ta_dialog_ungroup_cancel">Keep</string>
    <string name="ta_dialog_untotal_title">Turn off multitraction and total control of other engines?</string>
    <string name="ta_state_ok">Engine control is OK</string>
    <string name="ta_state_err">Last command failed</string>
    <string name="ta_state_stolen">Regaining engine control</string>
    <string name="ta_really_stop_dcc">Really stop DCC on whole layout?</string>

    <string name="ta_atp_mode">ATP mode:</string>
    <string name="ta_atp_train">Train</string>
    <string name="ta_atp_shunt">Shunting</string>
    <string name="ta_atp_overspeed_eb_msg">Automatic Train Protection: inhibited emergency braking due to overspeed!</string>
    <string name="ta_atp_direction_eb_msg">Automatic Train Protection: inhibited emergency braking due to wrong direction!</string>
    <string name="ta_atp_direction_change_not_allowed_msg">Automatic Train Protection: change of direction is not allowed!</string>
    <string name="ta_atp_movement_not_allowed">Automatic Train Protection: movement is not allowed (speed/direction)!</string>

    <string name="tr_disp_message">Optional message for the dispatcher:</string>
    <string name="tr_info_request_sent">Request sent, waiting for server response…</string>
    <string name="tr_info_waiting_disp">Request sent, waiting for dispatcher response…</string>
    <string name="tr_no_areas">No areas.</string>

    <string name="conn_servers_found">Discovered servers</string>
    <string name="conn_servers_stored">Saved servers</string>
    <string name="conn_wifi_unavailable">Cannot refresh servers list: WiFi connection is not available.</string>
    <string name="conn_refresh_in_progress">Refresh is in progress, wait for it to finish!</string>
    <string name="conn_connected">Connected and authorized.</string>
    <string name="conn_server_offline">Server is offline, really connect to server?</string>
    <string name="conn_delete_server">Really delete server?</string>
    <string name="conn_delete_all">Really delete all servers?</string>
    <string name="conn_refresh">Refresh</string>
    <string name="conn_add">Add</string>
    <string name="conn_no_servers_found">No servers found.</string>

    <string name="ns_server_name">Server name:</string>
    <string name="ns_server_ip_dns">Server address:</string>
    <string name="ns_server_port">Port:</string>
    <string name="ns_server_type">Server type:</string>
    <string name="ns_warning_compulsory">Address and port are compulsory fields.</string>
    <string name="ns_warning_invalid_characters">Name cannot contain sequence "--"</string>

    <string name="login_enter">Enter a login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_save">Save login</string>

    <string name="mm_connect">Connect</string>
    <string name="mm_change_login">Change login</string>
    <string name="mm_change_settings">Edit</string>
    <string name="mm_delete">Delete</string>
    <string name="mm_delete_all">Delete all servers</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="general_error">General error!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="dialog_ok">OK</string>
    <string name="total_on_error">Unable to enable Total control of %1$s!</string>
    <string name="total_off_error">Unable to turn off Total control of %1$s!</string>

    <string name="sc_connecting">Connecting…</string>
    <string name="sc_authorizing">Authorizing…</string>
    <string name="sc_getting_ors">Getting area…</string>
    <string name="sc_done">Successfully connected</string>
    <string name="sc_connection_ok">Communication established</string>
    <string name="sc_auth_ok">Successfully authorized</string>
    <string name="sc_auth_err">Authorization problem!</string>
    <string name="sc_version_warning">Server uses other protocol version, application may misbehave!</string>
    <string name="sc_auth_wait">Waiting for login…</string>
    <string name="sc_disconnected">Disconnected from server!</string>
    <string name="sc_connect_error">Error while connecting to the server</string>
    <string name="sc_disconnected_user_cancelled">User cancelled</string>

    <string name="engine_name">Name</string>
    <string name="engine_owner">Owner</string>
    <string name="engine_designation">Designation</string>
    <string name="engine_address">DCC address</string>
    <string name="engine_type">Type</string>
    <string name="engine_Vmax">Maximum speed</string>
    <string name="engine_note">Note</string>

    <string name="engine_kind_unknown">unknown</string>
    <string name="engine_kind_steam">steam</string>
    <string name="engine_kind_diesel">diesel</string>
    <string name="engine_kind_motor">motor</string>
    <string name="engine_kind_electric">electric</string>
    <string name="engine_kind_car">car</string>

    <string name="set_speed_volume">Use volume buttons to control speed</string>
    <string name="only_available_functions">Show only available functions</string>
    <string name="remember_login_default">Remember login by default</string>
    <string name="freeze_engine_screen_orientation">Freeze screen orientation in Engine activity</string>
    <string name="temporary_disable_atp_eb">Temporary disable Automatic Tratin Protection emergency brake inhibition (will be removed in future release)</string>
    <string name="theme">Theme</string>

    <string name="about">hJOP Driver lets you become an engine driver and control engines on your hJOP-controlled model railroad. https://hjop.kmz-brno.cz/</string>
    <string name="contributors">This application was created as a master thesis by Miroslav Marik at the Mendel University in Brno, Czech Republic.\n\n
        Contributors:\n
        • Jan Horáček (jan.horacek@kmz-brno.cz),\n
        • Vladan Kudláč,\n
        • Miroslav Mařík.</string>
</resources>
