<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="theme"
        app:title="@string/theme"
        app:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:key="SpeedVolume"
        app:title="@string/set_speed_volume"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:key="OnlyAvailableFunctions"
        app:title="@string/only_available_functions"
        app:defaultValue="true"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:key="RememberPasswordDefault"
        app:title="@string/remember_login_default"
        app:defaultValue="true"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:key="FreezeScreenEngine"
        app:title="@string/freeze_engine_screen_orientation"
        app:defaultValue="false"
        app:useSimpleSummaryProvider="false" />

</androidx.preference.PreferenceScreen>
