<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/content_train_handler"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.mendelu.xmarik.train_manager.activities.TrainHandler"
    tools:showIn="@layout/app_bar_train_handler"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <CheckBox
                            android:id="@+id/totalManaged"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ta_total" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <CheckBox
                            android:id="@+id/goupManaged1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/ta_multitraction"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/handlerDirection1"
                            android:layout_width="136dp"
                            android:layout_height="46dp"
                            android:layout_gravity="top|center_horizontal"
                            android:checked="false"
                            android:nestedScrollingEnabled="true"
                            android:textOff="@string/ta_direction_backwards"
                            android:textOn="@string/ta_direction_forward" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/ib_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:onClick="ib_StatusClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_circle_green" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/ib_dcc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0"
                            android:background="@null"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_circle_stop" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/stopButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="b_stopClick"
                            android:text="@string/ta_emergency_stop"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/startButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="b_idleClick"
                            android:text="@string/ta_idle"
                            tools:ignore="ButtonStyle" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/expSignalBlock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1" />

                    <cz.kudlav.scomview.ScomView
                        android:id="@+id/scom_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingStart="22dp"
                        android:paddingEnd="22dp" />

                    <TextView
                        android:id="@+id/expSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minWidth="64sp"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/kmh1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/speedkBar1"
                android:layout_weight="1"
                android:max="28"
                android:indeterminate="false"
                android:layout_gravity="center_vertical"
                android:paddingVertical="18dp" />

        </LinearLayout>
    </ScrollView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/checkBoxView1"
        android:choiceMode="multipleChoice" />

</LinearLayout>
